--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
     "html2canvas": "^1.4.1",
+    "mime": "^3.0.0",
     "node.js": "^0.0.1-security",
     "open": "^9.1.0",
     "open-cli": "^7.2.0"
